testdata/golden/sema/invalid/raw_pointers/var_ptr.fmt
fn main() -> int {
    let p: *int = nothing;
    return 0;
}
